--- a/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/HTML/Home.html
+++ b/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/HTML/Home.html
@@ -142,9 +142,9 @@
                 </div>
                 <div class="footer-item">
                     <h2>DANH MỤC SẢN PHẨM</h2>
-                    <a href="/HTML/daychuyen.html">DÂY CHUYỀN</a>
-                    <a href="../HTML/SanPham_Hublot.html">NHẪN</a>
-                    <a href="../HTML/SanPham_Rolex.html">VÒNG TAY</a>
+                    <a href="/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/HTML/daychuyen.html">DÂY CHUYỀN</a>
+                    <a href="/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/HTML/HTML/SanPham_Hublot.html">NHẪN</a>
+                    <a href="/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/HTML/HTML/SanPham_Rolex.html">VÒNG TAY</a>
                 </div>
                 <div class="footer-item">
                     <h2>THỐNG KÊ</h2>
@@ -171,18 +171,18 @@
                     </div>
                     
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary"><a href="./thanhtoan.html">Thanh toán</a></button>
-                        <button type="button" class="btn btn-secondary"><a href="./giohang.html">Giỏ hàng</a></button>
+                        <button type="button" class="btn btn-secondary"><a href="/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/HTML/thanhtoan.html">Thanh toán</a></button>
+                        <button type="button" class="btn btn-secondary"><a href="/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/HTML/giohang.html">Giỏ hàng</a></button>
                     </div>
                 </div>
             </div>
         </div>
         <div class="account">
             <div class="login">
-                <a href="./dangnhap.html">Đăng nhập</a>
+                <a href="/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/HTML/dangnhap.html">Đăng nhập</a>
             </div>
             <div class="register">
-                <a href="./dangky.html">Đăng ký</a>
+                <a href="/dangky.html">Đăng ký</a>
             </div>
         </div>
         <title>Sitemap</title>
