--- a/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/HTML/SanPham.html
+++ b/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/HTML/SanPham.html
@@ -8,8 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.js"></script>
     <title>Sản Phẩm</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/sanpham.css">
+    <link rel="stylesheet" href="/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/CSS/style.css">
+    <link rel="stylesheet" href="/STT47_22685931_NguyenThiXuanQuynh_BAITAPLON/CSS/sanpham.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
